
* The support for the embedded Elasticsearch will be dropped in the future. It is highly recommended to link:{{< relref "elasticsearch.asciidoc" >}}#_dedicated_elasticsearch[setup Elasticsearch as a dedicated service].

[[NEXT]]
== NEXT

icon:plus[] Search: A new search option `search.defaultFieldMappings` has been added. When disabled no default field mappings and fields will be added to the search index. Only those fields which specify a custom elasticsearch mapping will be added to the index. This is useful if you want to have finer control of what contents should be added to Elasticsearch. The setting is enabled by default. This way this change will not affect existing setups.

icon:plus[] Graph: The default value for `tx.retry.delay` has been set to 0. The tx delay will thus be disabled by default.

icon:plus[] Clustering: The `storage.synchronizeWrites` option will be enabled by default when clustering is active.

icon:plus[] OrientDB: The included OrientDB version has been updated to version 3.0.22

[[v0.39.2]]
== 0.39.2 (20.08.2019)

icon:check[] A regression in `v0.38.0` caused migration errors for nodes which contained not yet populated fields. This issue has now been fixed. Failed migrations can be re-run by deleting the failed job via `DELETE /api/v2/admin/jobs/{jobUuid}` and triggering `POST /api/v2/{project}/branches/{branchUuid}/migrateSchemas` to create a new migration job. link:https://github.com/gentics/mesh/issues/847[#847]

icon:plus[] Graph: It is now possible to configure the OrientDB transaction delay by adding the `tx.retry.delay` parameter to the the `storage.parameters` field.

[[v0.39.1]]
== 0.39.1 (14.08.2019)

icon:check[] A regression in `v0.39.0` broke the `/demo` endpoint. This has been fixed now and the demo application is accessible again.

[[v0.39.0]]
== 0.39.0 (13.08.2019)

icon:plus[] Core: The core has been reworked to add future support for multitenancy in Gentics Mesh.

[[v0.38.1]]
== 0.38.1 (12.08.2019)
