@@ -1,0 +1,8 @@
+package com.gentics.mesh.etc.config.search;
+
+public enum MappingMode {
+
+	STRICT,
+
+	DYNAMIC;
+}
