@@ -7,6 +7,7 @@ import com.gentics.mesh.OptionsLoader;
 import com.gentics.mesh.context.impl.LoggingConfigurator;
 import com.gentics.mesh.dagger.MeshComponent;
 import com.gentics.mesh.etc.config.MeshOptions;
+import com.gentics.mesh.etc.config.search.MappingMode;
 import com.gentics.mesh.router.EndpointRegistry;
 import com.gentics.mesh.verticle.admin.AdminGUIEndpoint;
 
@@ -26,7 +27,7 @@ public class ServerRunner {
 		LoggingConfigurator.init();
 		MeshOptions options = OptionsLoader.createOrloadOptions(args);
 
-		// options.setAdminPassword("admin");
+		options.setAdminPassword("admin");
 		// options.getStorageOptions().setStartServer(true);
 		// options.getHttpServerOptions().setCorsAllowCredentials(true);
 		// options.getHttpServerOptions().setEnableCors(true);
@@ -43,6 +44,7 @@ public class ServerRunner {
 		// options.getMonitoringOptions().setHost("0.0.0.0");
 		// options.getSearchOptions().setUrl(null);
 		// options.getSearchOptions().setStartEmbedded(false);
+		options.getSearchOptions().setMappingMode(MappingMode.STRICT);
 
 		Mesh mesh = Mesh.create(options);
 		mesh.setCustomLoader((vertx) -> {
